Bug 10404 - memory leak in [drivers/ata/sata_fsl.c:1279]
Summary: memory leak in [drivers/ata/sata_fsl.c:1279]
Status: RESOLVED CODE_FIX
Alias: None
Product: IO/Storage
Classification: Unclassified
Component: Serial ATA (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jeff Garzik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-06 05:18 UTC by Daniel Marjamäki
Modified: 2014-09-10 21:22 UTC (History)
3 users (show)

See Also:
Kernel Version: 2.6.24.4
Subsystem:
Regression: ---
Bisected commit-id:


Attachments

Description Daniel Marjamäki 2008-04-06 05:18:12 UTC
Latest working kernel version:
Earliest failing kernel version:
Distribution:
Hardware Environment:
Software Environment:
Problem Description:

Function: sata_fsl_probe

The variable 'r' is allocated.

But I can't see where it is deallocated.
Or even used. Can the variable be removed completely perhaps?

Steps to reproduce:
Comment 1 Andrew Morton 2008-04-06 12:36:59 UTC
Thanks, I queued a fix.

Note You need to log in before you can comment on or make changes to this bug.